# fifa_analytics

./: .dockerignore  .env.example  .gitignore  CHECKLIST_AUDITORIA_JOGADORES.md  CLAUDE.md  DESCOBERTA_API_OFICIAL_FIFA.md  PLANO_CI_CD.md  README.md  RELATORIO_AUDITORIA_DADOS_SCORES.md  RELATORIO_AUDITORIA_JOGADORES.md  REVISAO_METRICAS.md  planejamento_pipeline_copa_2026.md  pyproject.toml  requirements.txt  start_dev.sh
.claude/: profile-config.json  settings.json
.claude/commands/: ata.md  book.md  brief.md  commit.md  copa.md  curate.md  inbox.md  (+22 more)
alembic/: env.py
api/: Dockerfile
config/: pipeline.yaml  player_aliases.yaml  report_sections.yaml  sources.yaml  teams_info.yaml  teams_mapping.yaml
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
infra/: Caddyfile  DEPLOY.md  docker-compose.dev.yml  docker-compose.yml
notebooks/: 00_match_index.ipynb  01_ingest_sources.ipynb  02_validate_match_data.ipynb  03_match_context.ipynb  04_lineups.ipynb  05_match_events.ipynb  06_team_stats.ipynb  07_player_stats.ipynb  08_insights.ipynb  09_build_report.ipynb  10_tournament_reports.ipynb  11_scores.ipynb
schemas/: events.yaml  lineups.yaml  matches.yaml  player_stats.yaml  team_stats.yaml  teams.yaml
scripts/: bar_chart_race.py  check_matches.py  experimento_pesos.py  seed_dev.py  setup_dev.py
tests/: test_admin.py  test_analytics_api.py  test_auth.py  test_basic_reports.py  test_canonical_reports.py  test_cli.py  test_dashboard_js.py  test_descriptive.py  test_diagnostic.py  test_e2e_sample.py  test_espn_source.py  test_exploratory.py  test_fifa_transforms.py  test_gold_guard.py  test_name_reconciliation.py  test_platform_api.py  test_player_pivot.py  test_player_scores.py  test_pools_flexible.py  test_predictive.py  test_report_build.py  test_scheduler.py  test_schema_validation.py  test_scores.py  test_scores365_pipeline.py  test_scores365_source.py  test_scoring_engine.py  test_snapshot_pipeline.py  test_standings.py  test_team_scores.py  test_tournament_status.py  test_update_pipeline.py  test_utils_io.py  test_validation.py  test_wikipedia_edge_cases.py  test_wikipedia_source.py  test_worldcup2026_source.py
watcher/: fifa-progress.service  fifa-watcher.desktop  fifa-watcher.service  fifa_progress.py  flags.py  install-desktop.sh  install.sh  run-window.sh  stop-window.sh  watch-fifa.py
(+1135 files in other folders)
